deploy: 7bcee657569c47a5de52266f3a6877d5cd8137fa

--- a/python/python-fundamentals/index.html
+++ b/python/python-fundamentals/index.html
@@ -491,7 +491,7 @@ stops.</p>
 </div>
 </div>
 </div>
-<p>If we want to increase a value of a variable by a certain, we can use
+<p>If we want to increase a value of a variable by a certain value, we can use
 the <code class="docutils literal notranslate"><span class="pre">+=</span></code> operator. Here, we add 2 to the current value of x.</p>
 <div class="tab-set docutils container">
 <input checked="True" class="tab-input" id="tab-set--14-input--1" name="tab-set--14" type="radio"><label class="tab-label" for="tab-set--14-input--1">Python</label><div class="tab-content docutils container">
