--- a/python/conditionals/index.html
+++ b/python/conditionals/index.html
@@ -767,7 +767,7 @@ however.</p>
 
 <span class="k">elif</span> <span class="n">y</span> <span class="o">&lt;</span> <span class="mi">200</span><span class="p">:</span>
 
-   <span class="nb">print</span><span class="p">(</span><span class="s1">&#39;y ia between 100 and 200&#39;</span><span class="p">)</span>
+   <span class="nb">print</span><span class="p">(</span><span class="s1">&#39;y is between 100 and 200&#39;</span><span class="p">)</span>
 
 <span class="c1"># nothing prints here</span>
 </pre></div>
