deploy: bbcabe7169ee4d36a99fa404f5bf3a5d2be2ca62

--- a/r/data-analysis/index.html
+++ b/r/data-analysis/index.html
@@ -960,10 +960,8 @@ and X is the independent or predictor variable.</p>
 </div>
 </div>
 </div>
-<ul class="simple">
-<li><p>Homoscedasticity. The variance of the residual in a regression model is constant.</p></li>
-</ul>
-<p>We can check the Scale-Location plot or use the Breusch-Pagan test
+<p>-Homoscedasticity. The variance of the residual in a regression model is constant.
+We can check the Scale-Location plot or use the Breusch-Pagan test
 (null hypothesis: heteroskedasticity is not present)</p>
 <div class="tab-set docutils container">
 <input checked="True" class="tab-input" id="tab-set--43-input--1" name="tab-set--43" type="radio"><label class="tab-label" for="tab-set--43-input--1">R</label><div class="tab-content docutils container">
