deploy: 6fbd0a324885358d62a4b2839cdb77b5d3ecb188

--- a/contribute/rst-intro/index.html
+++ b/contribute/rst-intro/index.html
@@ -3,7 +3,16 @@
   <head><meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="color-scheme" content="light dark"><meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="index" title="Index" href="../../genindex/" /><link rel="search" title="Search" href="../../search/" /><link rel="next" title="How to suggest structural changes" href="../structural-changes/" /><link rel="prev" title="How to contribute small changes" href="../small-changes/" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VPGX1FF4LJ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-VPGX1FF4LJ');
+    </script>
+    <link rel="index" title="Index" href="../../genindex/" /><link rel="search" title="Search" href="../../search/" /><link rel="next" title="How to suggest structural changes" href="../structural-changes/" /><link rel="prev" title="How to contribute small changes" href="../small-changes/" />
 
     <link rel="shortcut icon" href="../../_static/favicon-32x32.png"/><!-- Generated with Sphinx 7.1.2 and Furo 2024.08.06 -->
         <title>reStructuredText basics - DeisData</title>
