--- a/genindex/index.html
+++ b/genindex/index.html
@@ -2,7 +2,16 @@
 <html class="no-js" lang="en" data-content_root="">
   <head><meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <meta name="color-scheme" content="light dark"><link rel="index" title="Index" href="#" /><link rel="search" title="Search" href="../search/" />
+    <meta name="color-scheme" content="light dark">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VPGX1FF4LJ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-VPGX1FF4LJ');
+    </script>
+    <link rel="index" title="Index" href="#" /><link rel="search" title="Search" href="../search/" />
 
     <link rel="shortcut icon" href="../_static/favicon-32x32.png"/><!-- Generated with Sphinx 7.1.2 and Furo 2024.08.06 --><title>Index - DeisData</title>
 <link rel="stylesheet" type="text/css" href="../_static/pygments.css?v=8f2a1f02" />
