deploy: 6940d11dec6fe0fb1b6fb9a6e95c45e98d1e2348

--- a/python/setup-install/index.html
+++ b/python/setup-install/index.html
@@ -393,9 +393,8 @@ Jupyter Notebook. Click <strong>Launch</strong> (or <strong>Install</strong> and
 <strong>Launch</strong>) to open Jupyter Notebook in a web browser.</p></li>
 <li><p>Jupyter Notebook opens in a web browser but is running locally on
 your computer. On the main tab <strong>Files</strong> you will see a location in
-your file system. This startup folder is called the root directory of
-the app. Make sure you have a folder you can navigate to where you
-can put any files and datasets you’ll be using.</p></li>
+your file system. You should save your workshop files in a folder you
+can navigate easily, like somewhere on your Desktop or your Documents.</p></li>
 </ol>
 </section>
 </section>
